tests/NormalTests/paczka1/fuzzy1/19953074.err
Error in line 2: vxPfbr6nL S628 88,0
Error in line 17: ST2ZWWgb8hM ÿ576 56,2
Error in line 20: S628 A576 83,65
Error in line 32: vxPfbr6nL A515 45,2
